Update about cloud9 for now.

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -114,7 +114,7 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書はRuby 2.3.1と、Rails 5.0.0およびRails4.2.4で動作確認をしています。
+本書はRuby 2.3.1と、Rails 5.0.0およびRails4.2.4で動作確認をしています。[^1]
 
 [^1]: 2016年7月2日現在、Railsの最新バージョンは5.0.0です。本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。Rails4.2でRails5.0と異なる部分については、その都度補足していきます。
 
@@ -128,9 +128,22 @@ Use Ctrl-C to stop
 
 ### ブラウザだけで開発できるクラウド開発環境 - Cloud9
 
-[Cloud9](https://c9.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはCloud9へ会員登録を行うだけです。有料プランもありますが、本書の内容で開発を行う範囲では無料プランの範囲で利用することができます。
+[Cloud9](https://c9.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはCloud9へ会員登録を行うだけです。有料プランもありますが、本書の内容で開発を行う範囲では無料プランの範囲で利用することができます。マシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Cloud9がサービスをやめてしまうと継続して使えないというデメリットもあります。
 
-ワークスペースを作成する際に、テンプレートとしてRuby on Rails Tutorialを選ぶと、この資料の範囲が終わったあとで、次のステップとなる資料Rais Tutorialを利用することもできるのでお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。ターミナルからはgitコマンドも利用できるので、githubでソース管理することも可能です。
+利用には会員登録が必要です。会員登録後、ワークスペース（開発環境）を作成します。その際のテンプレートとしてはRails Tutorialを選ぶのがお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。ターミナルからはgitコマンドも利用できるので、githubでソース管理することも可能です。
+
+2016年7月2日現在でCloud9に最初からインストールされているバージョンはRuby 2.3.0です。最初にrailsをインストールします。
+
+```console
+$ gem i rails
+```
+
+`rails -v`コマンドでインストールしたrailsのバージョンを確認します。
+
+```console
+$ rails -v
+Rails 5.0.0
+```
 
 ローカルでの開発と違うのは、rails sコマンド（rails serverの略）と、そこへのアクセス方法です。rails sコマンドを実行する際は、以下のように-b, -pオプションを指定する必要があります。
 
@@ -140,25 +153,18 @@ $ rails s -b $IP -p $PORT
 
 また、起動したWebサーバへのアクセスは、ローカルに環境を作った場合と異なり、上部メニューにあるPreview - Preview Running Applicationからアクセスします。
 
-クラウドで開発できるCloud9はマシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Cloud9がサービスを止めてしまうと継続して使えないというデメリットもあります。
-
-2016年2月現在でCloud9に最初からインストールされているバージョンはRuby 2.2.1、Rails 4.2.4です。RubyとRailsについて、そのままのバージョンで利用していただいても本書の内容は実行可能です。もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。少し難しい内容になりますので、はじめての方は初期状態で利用する方が簡単です（Rubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です）。
+以下はRubyのバージョンアップ方法です。少し難しい内容になりますので、はじめての方はここまでの内容で完了し、初期状態で利用する方が簡単です。cloud9ではRubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です）。[^2]
 
 ```console
 $ rvm get stable
 $ rvm install 2.3.1
 ```
 
-インストール後、Railsアプリのルートフォルダへ .ruby-versionを作成し、`2.3.1` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
+[^2]: これでうまくいかない場合はrvm公式サイト[https://rvm.io/rvm/upgrading](https://rvm.io/rvm/upgrading)に掲載されている方法(`\curl -sSL https://get.rvm.io | bash -s stable; rvm reload`)を試してからもう一度実行してみてください。
 
-Rubyを新規インストールした場合は、そのあとで必要なGemライブラリをインストールします。
+インストール後、Railsアプリのルートフォルダへ .ruby-versionファイルを作成し、`2.3.1` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
 
-```console
-$ gem i bundler
-$ gem i rails
-```
-
-Railsのバージョンを上げたい場合はRailsプロジェクト内のGemfile中の`gem 'rails', '5.0.0'`のバージョンを上げて`bundle update`コマンドを実行するか、`gem i rails`したあとでrails newコマンドを使って新しいRailsアプリを作成してください。
+Rubyを新規インストールした場合は、そのあとでrailsをインストールします。
 
 ### ローカルに開発環境を作る - Macの場合
 
@@ -212,9 +218,9 @@ $ gem install rails
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。インストーラをダウンロードして実行してください。
 
-ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドを使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9を利用することも検討してみてください[^2]。
+ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドを使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9を利用することも検討してみてください[^3]。
 
-[^2]: 2016年2月現在の最新パッケージは、Ruby 2.2.4, Rails 4.2という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+[^3]: 2016年2月現在の最新パッケージは、Ruby 2.2.4, Rails 4.2という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atomは無料で利用することができます（ライセンスはMITライセンスです）。
 
