--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -153,7 +153,7 @@ $ rails s -b $IP -p $PORT
 
 また、起動したWebサーバへのアクセスは、ローカルに環境を作った場合と異なり、上部メニューにあるPreview - Preview Running Applicationからアクセスします。
 
-以下はRubyのバージョンアップ方法です。少し難しい内容になりますので、はじめての方はここまでの内容で完了し、初期状態で利用する方が簡単です。cloud9ではRubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です）。[^2]
+以下はRubyのバージョンアップ方法です。少し難しい内容になりますので、はじめての方はここまでの内容で完了し、初期状態で利用する方が簡単です。cloud9ではRubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です。[^2]
 
 ```console
 $ rvm get stable
