fix line termination; using punctuation or should be heading

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -224,7 +224,7 @@ DBへデータを格納していくことは、title、memoといった列があ
 scaffoldで指定していたのはテーブル名とカラム、データの型でした。stringはデータの型です。文字列を格納できます。
 textもデータの型で（stringよりも多く）文字列を格納できます。
 
-ここまでで、scaffoldはDB設計図（migration）を作ることを説明しました
+ここまでで、scaffoldはDB設計図（migration）を作ることを説明しました。
 
 ![scaffold は migration を作る](assets/model/kn/migration_summary.png)
 
@@ -473,7 +473,7 @@ $ rails db:migrate
 
 ### viewを修正
 
-フォームパーシャル
+#### フォームパーシャル
 
 `app/views/books/_form.html.erb`
 
@@ -501,7 +501,7 @@ $ rails db:migrate
 <% end %>
 ```
 
-詳細表示画面
+#### 詳細表示画面
 
 `app/views/books/show.html.erb`
 
@@ -527,7 +527,7 @@ $ rails db:migrate
 <%= link_to 'Back', books_path %>
 ```
 
-一覧表示画面
+#### 一覧表示画面
 
 `app/views/books/index.html.erb`
 
