Fix typo in model page.

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -281,7 +281,7 @@ book = Book.new(title: "ハチミツとクローバー",
                 memo: "美大を舞台にした青春ラブコメ")
 ```
 
-Book.newでBook Modelオブジェクトを作ります。モデル名は英語の単数形にするルールがあります。引数でtitle、modelといった各カラムのデータを渡せます。
+Book.newでBook Modelオブジェクトを作ります。モデル名は英語の単数形にするルールがあります。引数でtitle、memoといった各カラムのデータを渡せます。
 
 ```ruby
 book.save
