Fix incorrect code in model page

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -296,7 +296,7 @@ books = Book.all.to_a
 Book.allでDBに保存されているBook Modelの全データを取得できます。Book.all.to_aを実行すると、ArrayにBookオブジェクトが詰まって返ってきます。
 
 ```ruby
-book = Book.where(title: "ハチミツとクローバー")
+book = Book.where(title: "ハチミツとクローバー").first
 book.title #=> "ハチミツとクローバー"
 book.memo #=> "美大を舞台にした青春ラブコメ"
 ```
