Fix typo in crud page

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -204,7 +204,7 @@ class BooksController < ApplicationController
   ...
 ```
 
-`class BooksController < ApplicationController`から最後の行の`end`までがBooksControllerのコードです。この中の`dev index`から次の`end`までがindexアクションになります（対応するendで字下げ（インデント）が揃えて書いてあります）。
+`class BooksController < ApplicationController`から最後の行の`end`までがBooksControllerのコードです。この中の`def index`から次の`end`までがindexアクションになります（対応するendで字下げ（インデント）が揃えて書いてあります）。
 
 ここでやっていることは1行、`@books = Book.all` です。Book.allでBookの全データが詰まった配列を取得して、@booksインスタンス変数へ代入します（Book.allでBookの全データがとれる仕組みについては、またあとで説明します）。
 
