Update preface page to Rails.5.0.1 with Ruby2.4.0

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -96,10 +96,10 @@ $ rails s
 
 ```console
 => Booting Puma
-=> Rails 5.0.0 application starting in development on http://localhost:3000
+=> Rails 5.0.1 application starting in development on http://localhost:3000
 => Run `rails server -h` for more startup options
 Puma starting in single mode...
-* Version 3.4.0 (ruby 2.3.1-p112), codename: Owl Bowl Brawl
+* Version 3.6.2 (ruby 2.4.0-p0), codename: Sleepy Sunday Serenity
 * Min threads: 5, max threads: 5
 * Environment: development
 * Listening on tcp://localhost:3000
@@ -114,9 +114,9 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書はRuby 2.4.0と、Rails 5.0.1で動作確認をしています。[^1]
+本書はRuby 2.4.0、Rails 5.0.1で動作確認をしています。[^1]
 
-[^1]: 2017年1月8日現在、Rubyの最新バージョンは2.4.0、Railsの最新バージョンは5.0.1です。本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。Rails4.2でRails5.0と異なる部分については、その都度補足していきます。
+[^1]: 2017年1月8日現在、Rubyの最新バージョンは2.4.0、Railsの最新バージョンは5.0.1です。本書の内容はRuby 2.3.3でも同様に実行できます。また、Rails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。Rails4.2とRails5.0とで異なる部分については、その都度補足していきます。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。ローカルに開発環境を作る場合と比べて、トラブルなく開発をはじめることができます。
 
