Update preface about cloud9

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -132,7 +132,7 @@ Use Ctrl-C to stop
 
 利用には会員登録が必要です。会員登録後、ワークスペース（開発環境）を作成します。その際のテンプレートとしてはRails Tutorialを選ぶのがお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。ターミナルからはgitコマンドも利用できるので、githubでソース管理することも可能です。
 
-★要修正 2016年7月2日現在でCloud9に最初からインストールされているバージョンはRuby 2.3.0です。最初にrailsをインストールします。
+2017年1月8日現在でCloud9に最初からインストールされているバージョンはRuby 2.3.0です。最初にrailsをインストールします。
 
 ```console
 $ gem i rails
