Fix trivial problem in preface page

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -153,11 +153,11 @@ $ rails s -b $IP -p $PORT
 
 また、起動したWebサーバへのアクセスは、ローカルに環境を作った場合と異なり、上部メニューにあるPreview - Preview Running Applicationからアクセスします。
 
-Railsアプリはどこのフォルダへ置いても動作しますが、workspaceフォルダ以下に置くと画面左側のWorkspace欄にフォルダツリーが表示されて便利です。本書の"my_web_apps"のフォルダ名を"workspace"に読み替えるのがお勧めです。
+Railsアプリはどこのフォルダへ置いても動作しますが、workspaceフォルダ以下に置くと画面左側のWorkspace欄にフォルダツリーが表示されて便利です。本書では`my_web_apps`フォルダへRailsアプリを作成していきますので、これを`workspace`に読み替えるのがお勧めです。
 
 ここまででセットアップは完了です。慣れている方へ向けて、以下にRubyのバージョンアップ方法を書きますが、少し難しい内容になりますので、はじめての方はここまでの内容で完了して初期状態で利用するのをお勧めします。
 
-ここからはcloud9でRubyをバージョンアップする方法を説明します。cloud9はRubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です。[^2]
+ここからはCloud9でRubyをバージョンアップする方法を説明します。Cloud9はRubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です。[^2]
 
 ```console
 $ rvm get stable
@@ -210,7 +210,7 @@ $ rbenv global 2.4.0
 以上でRubyのインストールは完了です。続いて、インストールしたRubyを使ってRailsをインストールします。
 
 ```console
-$ gem install rails
+$ gem i rails
 ```
 
 ここまででRubyとRailsの開発環境構築ができました。
