Update to Rails5.1.1 in preface and my first web app pages.

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -96,13 +96,13 @@ $ rails s
 
 ```console
 => Booting Puma
-=> Rails 5.0.1 application starting in development on http://localhost:3000
+=> Rails 5.1.1 application starting in development on http://localhost:3000
 => Run `rails server -h` for more startup options
 Puma starting in single mode...
-* Version 3.6.2 (ruby 2.4.0-p0), codename: Sleepy Sunday Serenity
+* Version 3.8.2 (ruby 2.4.1-p111), codename: Sassy Salamander
 * Min threads: 5, max threads: 5
 * Environment: development
-* Listening on tcp://localhost:3000
+* Listening on tcp://0.0.0.0:3000
 Use Ctrl-C to stop
 ```
 
@@ -114,7 +114,7 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書はRuby 2.4.0、Rails 5.0.1で動作確認をしています。[^1]
+本書はRuby 2.4.1、Rails 5.1.1で動作確認をしています。[^1]
 
 [^1]: 2017年1月8日現在、Rubyの最新バージョンは2.4.1、Railsの最新バージョンは5.1.1です。
 
@@ -142,7 +142,7 @@ $ gem i rails
 
 ```console
 $ rails -v
-Rails 5.0.1
+Rails 5.1.1
 ```
 
 ローカルでの開発と違うのは、rails sコマンド（rails serverの略）と、そこへのアクセス方法です。rails sコマンドを実行する際は、以下のように-b, -pオプションを指定する必要があります。
@@ -161,8 +161,8 @@ Railsアプリはどこのフォルダへ置いても動作しますが、worksp
 
 ```console
 $ rvm get stable
-$ rvm install 2.4.0
-$ rvm --default use 2.4.0
+$ rvm install 2.4.1
+$ rvm --default use 2.4.1
 ```
 
 [^2]: これでうまくいかない場合はrvm公式サイト[https://rvm.io/rvm/upgrading](https://rvm.io/rvm/upgrading)に掲載されている方法（`\curl -sSL https://get.rvm.io | bash -s stable; rvm reload`）を試してからもう一度実行してみてください。
@@ -198,13 +198,13 @@ $ source ~/.bash_profile
 rbenvを使ってRubyをインストールします。
 
 ```console
-$ rbenv install 2.4.0
+$ rbenv install 2.4.1
 ```
 
 installしたRubyを利用するように設定します。
 
 ```console
-$ rbenv global 2.4.0
+$ rbenv global 2.4.1
 ```
 
 以上でRubyのインストールは完了です。続いて、インストールしたRubyを使ってRailsをインストールします。
@@ -247,7 +247,7 @@ GOTO :EOF
 @"ruby.exe" "%~dpn0" %*
 ```
 
-[^3]: 2017年1月現在の最新パッケージは、Ruby 2.3.3, Rails 5.0.1という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+[^3]: 2017年1月現在の最新パッケージは、Ruby 2.3.3, Rails 5.1.1という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atomは無料で利用することができます（ライセンスはMITライセンスです）。
 
