--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -38,7 +38,7 @@ Use `bundle show [gemname]` to see where a bundled gem is installed.
 * bin/rails: spring inserted
 ```
 
-次に、以下のコマンドを実行します[^1]（メッセージ中"in process 52142"、"20160702024137"、"-> 0.0013s"の数字は実行するごとに異なります）。
+次に、以下のコマンドを実行します（メッセージ中"in process 52142"、"20160702024137"、"-> 0.0013s"の数字は実行するごとに異なります）。
 
 ```bash
 cd books_app
@@ -68,8 +68,6 @@ $ rails s
 * Listening on tcp://localhost:3000
 Use Ctrl-C to stop
 ```
-
-[^1]: Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` と実行してください。
 
 ブラウザを起動して以下のURLを入力してアクセスしてみます。
 
