Update crud page

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -97,6 +97,9 @@ scaffoldは英語で「（建築現場などの）足場」という意味です
 
 ```console
 $ rails g scaffold book title:string memo:text
+  Running via Spring preloader in process 5809
+  invoke  active_record
+  create    db/migrate/20170603020446_create_books.rb
   create    app/models/book.rb
   invoke    test_unit
   create      test/models/book_test.rb
@@ -120,11 +123,16 @@ $ rails g scaffold book title:string memo:text
   invoke    jbuilder
   create      app/views/books/index.json.jbuilder
   create      app/views/books/show.json.jbuilder
+  create      app/views/books/_book.json.jbuilder
+  invoke  test_unit
+  create    test/system/books_test.rb
   invoke  assets
   invoke    coffee
   create      app/assets/javascripts/books.coffee
   invoke    scss
   create      app/assets/stylesheets/books.scss
+  invoke  scss
+  create    app/assets/stylesheets/scaffolds.scss
 ```
 
 この中のroute（`invoke resource_route`）, controller（`invoke scaffold_controller`）やview（`invoke erb`）は前の章で説明したrailsの各役割を担うファイルです。
