--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -106,8 +106,8 @@ rails c
 
 ```console
 $ rails c
-Running via Spring preloader in process 53813
-Loading development environment (Rails 5.0.1)
+Running via Spring preloader in process 14067
+Loading development environment (Rails 5.1.1)
 irb(main):001:0> #ここにコードを入力します
 ```
 
@@ -188,7 +188,7 @@ DBの設計図をマイグレーション（migration）ファイルと呼びま
 `db/migrate/20160214232240_create_books.rb`
 
 ```ruby
-class CreateBooks < ActiveRecord::Migration[5.0]
+class CreateBooks < ActiveRecord::Migration[5.1]
   def change
     create_table :books do |t|
       t.string :title
@@ -199,6 +199,8 @@ class CreateBooks < ActiveRecord::Migration[5.0]
   end
 end
 ```
+
+1行目の `ActiveRecord::Migration[5.1]` の末尾にある数字はRailsのバージョンを表します。Rails5.1.xではこのように5.1となります。
 
 3行目の `create_table :books` でbooksという名前のテーブルを作ります。DBはテーブルという単位でデータを管理します。このアプリの、本に関するデータを保存するために、booksという名前のテーブルを作っています。テーブル名はモデル名の複数形にするというルールがあります。
 
@@ -267,7 +269,7 @@ end
 
 ![scaffoldコマンドがファイルを作る](assets/model/kn/summary_scaffold_make_files.png)
 
-![rails db migrate コマンドがDBを作る](assets/model/kn/summary_rake_db_migrate.png)
+![rails db migrate コマンドがDBを作る](assets/model/kn/summary_rails_db_migrate.png)
 
 ![model と DB でアプリは動く](assets/model/kn/summary_model_db.png)
 
@@ -357,7 +359,7 @@ rails g migration Addカラム名Toテーブル名 カラム名:型名
 ```
 
 ```ruby
-class AddAuthorToBooks < ActiveRecord::Migration[5.0]
+class AddAuthorToBooks < ActiveRecord::Migration[5.1]
   def change
     add_column :books, :author, :string
   end
@@ -450,7 +452,7 @@ $ rails g migration AddAuthorToBooks author:string
 `db/migrate/20160215230716_add_author_to_books.rb`
 
 ```ruby
-class AddAuthorToBooks < ActiveRecord::Migration[5.0]
+class AddAuthorToBooks < ActiveRecord::Migration[5.1]
   def change
     add_column :books, :author, :string
   end
@@ -477,21 +479,21 @@ $ rails db:migrate
 `app/views/books/_form.html.erb`
 
 ```diff
-<%= form_for(book) do |f| %>
+<%= form_with(model: book, local: true) do |form| %>
 ...
   <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= form.label :title %>
+    <%= form.text_field :title, id: :book_title %>
   </div>
 
   <div class="field">
-    <%= f.label :memo %>
-    <%= f.text_area :memo %>
+    <%= form.label :memo %>
+    <%= form.text_area :memo, id: :book_memo %>
   </div>
 
 +  <div class="field">
-+    <%= f.label :author %><br>
-+    <%= f.text_field :author %>
++    <%= form.label :author %>
++    <%= form.text_field :author, id: :book_author %>
 +  </div>
 
   <div class="actions">
