Update preface page

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -36,7 +36,7 @@ categories:
 - Railsプログラミングは初めてである
 - Railsプログラミングを講義で教えたい
 
-プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義では初めてプログラムを書く学生さんが多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
+プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した一橋大学社会学部での半期分の講義資料をもとに書いています。講義では初めてプログラムを書く学生さんが多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
 
 プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。HTMLとCSSについて学びたい方は、たとえば以下の情報が分かり易いです。
 
@@ -56,7 +56,7 @@ categories:
 
 Railsプログラミングを講義で教えたい方へ。本書はwebアプリがどういうものなのかを実際に手を動かしながら学ぶ構成になっています。実際の講義資料を元に書いており、講義はプログラミングが初めての学生さんらに向けて1回90分の講義約10回で行いました。その後、3回の講義時間を使って自由にwebアプリを作る実習を行ったところ、彼ら彼女らは自分で考えた実用的であったり、たのしさにあふれたりする、独創性のあるプログラムを作りあげて発表してくれました。本書はできるだけ易しく説明を進めますが、Rubyのことやshellのこと、プログラミングでしか使わない記号など、つまづいた際にはサポートの手を差し伸べられる環境を作っておくと順調に前に進めるようになります。
 
-本書の対象から外れるのは以下のような方です。
+一方で、本書の対象から外れるのは以下のような方です。
 
 - Railsの基礎はわかっている
 
@@ -76,7 +76,7 @@ puts "Hello world!"
 ```diff
 class HelloController < ApplicationController
   def index
--   @time = Time.now
+-   @time = Time.current
 +   @time = 1.day.ago
   end
 end
@@ -116,7 +116,7 @@ Use Ctrl-C to stop
 
 本書はRuby 2.4.1、Rails 5.1.1で動作確認をしています。[^1]
 
-[^1]: 2017年1月8日現在、Rubyの最新バージョンは2.4.1、Railsの最新バージョンは5.1.1です。
+[^1]: 2017年6月11日現在、Rubyの最新バージョンは2.4.1、Railsの最新バージョンは5.1.1です。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。ローカルに開発環境を作る場合と比べて、トラブルなく開発をはじめることができます。
 
@@ -132,13 +132,15 @@ Use Ctrl-C to stop
 
 利用には会員登録が必要です。会員登録後、ワークスペース（開発環境）を作成します。その際のテンプレートとしてはRails Tutorialを選ぶのがお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。ターミナルからはgitコマンドも利用できるので、githubでソース管理することも可能です。
 
-2017年1月現在でCloud9に最初からインストールされているバージョンはRuby 2.3.0です。最初にrailsをインストールします。
+2017年6月現在でCloud9に最初からインストールされているRubyはバージョン2.3.0です。このバージョンのRubyで本書の内容を実行することができます。もしも最新バージョンのRubyを利用したい場合は、後述の手順で先にRubyをバージョンアップしてからRailsをインストールしてください。
+
+最初にrailsをインストールします。
 
 ```console
 $ gem i rails
 ```
 
-`rails -v`コマンドでインストールしたrailsのバージョンを確認します。
+`rails -v`コマンドでインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンになります。
 
 ```console
 $ rails -v
@@ -157,7 +159,9 @@ Railsアプリはどこのフォルダへ置いても動作しますが、worksp
 
 ここまででセットアップは完了です。慣れている方へ向けて、以下にRubyのバージョンアップ方法を書きますが、少し難しい内容になりますので、はじめての方はここまでの内容で完了して初期状態で利用するのをお勧めします。
 
-ここからはCloud9でRubyをバージョンアップする方法を説明します。Cloud9はRubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です。[^2]
+#### Cloud9で最新版のRubyをインストールする手順
+
+ここからはCloud9で最新版のRubyを使う方法を説明します。Cloud9はRubyの管理にrvmを利用しているので、rvmでの通常の手順でバージョンアップ可能です。[^2]
 
 ```console
 $ rvm get stable
@@ -213,17 +217,51 @@ $ rbenv global 2.4.1
 $ gem i rails
 ```
 
+`rails -v`コマンドでインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンになります。
+
+```console
+$ rails -v
+Rails 5.1.1
+```
+
 ここまででRubyとRailsの開発環境構築ができました。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://atom.io/) をお勧めします。Atomは無料で利用することができます（ライセンスはMITライセンスです）。
 
 ### ローカルに開発環境を作る - Windowsの場合
 
-Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。インストーラをダウンロードして実行してください。
+Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。
 
-ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドを使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9を利用することも検討してみてください[^3]。
+2017年6月現在の最新であるバージョン3.3.0には問題があり、インストール後にファイルを修正する必要があります。前のバージョンであるバージョン3.2.1ではこの問題は起こらないため、こちらを利用することをお勧めします。バージョン3.2.1ではRubyのバージョンが2.2.6と古いバージョンになりますが、Railsは最新バージョンの5.1.1を使うことができ、本書の内容もそのまま実行可能です。後述の方法で、どちらかのバージョンを選んでインストールしてください。
 
-2017年1月現在の最新インストーラ（[rails_installer3.3.0.exe](https://s3.amazonaws.com/railsinstaller/Windows/railsinstaller-3.3.0.exe)）には問題があり、インストール後に2つのファイルを修正する必要があります。修正する手順は以下の通りです。RailsInstallerを`C:¥RailsInstaller`フォルダへインストールしたケースを想定しています。
+もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9を利用することも検討してみてください[^3]。
+
+プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atomは無料で利用することができます（ライセンスはMITライセンスです）。
+
+#### RailsInstallerバージョン3.2.1を使う手順
+
+バージョン3.2.1を使う手順を説明します。インストーラ（[rails_installer3.2.1.exe](https://s3.amazonaws.com/railsinstaller/Windows/railsinstaller-3.2.1.exe)）をダウンロードし、指示に従い実行していきます。オプションなどは初期状態のままで問題ありません。
+
+ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定が行われずにrailsコマンドやrubyコマンドを使えない場合があります。
+
+```console
+$ gem update rails --no-document
+```
+
+`rails -v`コマンドでインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンになります。
+
+```console
+$ rails -v
+Rails 5.1.1
+```
+
+RailsInstallerバージョン3.2.1を使う手順はここまでです。以下の「RailsInstallerバージョン3.3.0を使う手順」は読み飛ばして構いません。
+
+#### RailsInstallerバージョン3.3.0を使う手順
+
+バージョン3.3.0を使う手順を説明します。バージョン3.3.0を使う場合は、インストール後に2つのファイルを修正する必要があります。インストーラ（[rails_installer3.3.0.exe](https://s3.amazonaws.com/railsinstaller/Windows/railsinstaller-3.3.0.exe)）をダウンロードし、指示に従い実行していきます。オプションなどは初期状態のままで問題ありません。
+
+修正する手順は以下の通りです。RailsInstallerを`C:¥RailsInstaller`フォルダへインストールしたケースを想定しています。
 
 `C:¥RailsInstaller¥Ruby2.3.0¥bin¥bundle.bat`ファイルをエディタで開き、`C:\Users\emachnic\GitRepos\railsinstaller-windows\stage\Ruby2.3.0\bin\`と書かれた箇所をすべて削除します。修正後のファイルは以下のようになります。
 
@@ -247,10 +285,19 @@ GOTO :EOF
 @"ruby.exe" "%~dpn0" %*
 ```
 
-[^3]: 2017年1月現在の最新パッケージは、Ruby 2.3.3, Rails 5.1.1という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定が行われずにrailsコマンドやrubyコマンドを使えない場合があります。
 
-プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atomは無料で利用することができます（ライセンスはMITライセンスです）。
+```console
+$ gem update rails --no-document
+```
+
+`rails -v`コマンドでインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンになります。
+
+```console
+$ rails -v
+Rails 5.1.1
+```
+
+[^3]: RailsInstaller3.3.0をインストールし、2つのファイルの修正を行わなかった場合にこのエラーが表示されます。RailsInstaller3.2.1を使うことで直ることがあります。また、Railsのバージョンはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能ですが、Rubyのバージョンを上げるのは簡単ではないのでパッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 ---
-
-それでは、次の章から早速Railsアプリづくりを始めましょう！
