Modify suttle changes

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -234,7 +234,7 @@ Rails 5.1.1
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。
 
-2017年6月現在の最新であるバージョン3.3.0には問題があり、インストール後に若干の修正する必要があります。前のバージョンであるバージョン3.2.1ではこの問題は起こらないため、こちらを利用しても問題ありません。バージョン3.2.1ではRubyのバージョンが2.2.6と古いバージョンになりますが、Railsは最新バージョンの5.1.1を使うことができ、本書の内容もそのまま実行可能です。後述の方法で、どちらかのバージョンを選んでインストールしてください。
+2017年6月現在の最新であるバージョン3.3.0には問題があり、インストール後に若干の修正する必要があります。前のバージョンである3.2.1ではこの問題は起こらないため、こちらを利用しても問題ありません。バージョン3.2.1ではRubyのバージョンが2.2.6と古いバージョンになりますが、Railsは最新バージョンの5.1.1を使うことができ、本書の内容もそのまま実行可能です。後述の方法で、どちらかのバージョンを選んでインストールしてください。
 
 もしも想定通り動作しない場合は、上記のCloud9を利用することも検討してみてください[^3]。
 
@@ -273,7 +273,7 @@ Windowsのアプリケーション選択から "Command Prompt with Ruby and Rai
 $ rails -v
 ```
 
-「指定されたパスが見つかりません。」と表示される場合があります。これはインストーラがrailsコマンドのパスを正しくセットアップできていないときに起こりますが、簡単に直すことができます。以下のコマンドを実行してください。
+「指定されたパスが見つかりません」と表示される場合があります。これはインストーラがrailsコマンドのパスを正しくセットアップできていないときに起こりますが、簡単に直すことができます。以下のコマンドを実行してください。
 
 ```console
 $ gem install rails bundler --no-document
@@ -288,7 +288,7 @@ Rails 5.1.1
 
 このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
 
-もしもRailsのバージョンが5.1よりも小さい場合は 以下のコマンドを実行することでバージョンアップできます。
+もしもRailsのバージョンが5.1よりも小さい場合は、以下のコマンドを実行することでバージョンアップできます。
 
 ```console
 $ gem update rails --no-document
