Update Rails5.1.2 description and adopt lint

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -54,7 +54,7 @@ categories:
 
 もしもあなたが他の言語でプログラミングをした経験があれば、これも大きなアドバンテージです。特にJavaScript（ブラウザ上で広く使われているプログラミング言語）の経験がある方は、本書の知識をつかってインタラクティブで格好良いWebアプリを作ることができるようになるでしょう（本書ではJavaScriptについては説明しません）。Rubyの経験がある方は、本書の内容を越えた範囲について、いままでの知識をつかって早く成長することができるでしょう。
 
-Railsプログラミングを講義で教えたい方へ。本書はwebアプリがどういうものなのかを実際に手を動かしながら学ぶ構成になっています。実際の講義資料を元に書いており、講義はプログラミングが初めての学生さんらに向けて1回90分の講義約10回で行いました。その後、3回の講義時間を使って自由にwebアプリを作る実習を行ったところ、彼ら彼女らは自分で考えた実用的であったり、たのしさにあふれたりする、独創性のあるプログラムを作りあげて発表してくれました。本書はできるだけ易しく説明を進めますが、Rubyのことやshellのこと、プログラミングでしか使わない記号など、つまづいた際にはサポートの手を差し伸べられる環境を作っておくと順調に前に進めるようになります。
+Railsプログラミングを講義で教えたい方へ。本書はwebアプリがどういうものなのかを実際に手を動かしながら学ぶ構成になっています。実際の講義資料を元に書いており、講義はプログラミングが初めての学生さんらに向けて1回90分の講義約10回で行いました。その後、3回の講義時間を使って自由にwebアプリを作る実習を行ったところ、彼ら彼女らは自分で考えた実用的であったり、たのしさにあふれたりする、独創性のあるプログラムを作りあげて発表してくれました。本書はできるだけ易しく説明を進めますが、Rubyのことやshellのこと、プログラミングでしか使わない記号など、つまづいた際にはサポートの手を差し伸べられる環境を作っておくと順調に前へ進めるようになります。
 
 一方で、本書の対象から外れるのは以下のような方です。
 
@@ -96,7 +96,7 @@ $ rails s
 
 ```console
 => Booting Puma
-=> Rails 5.1.1 application starting in development on http://localhost:3000
+=> Rails 5.1.2 application starting in development on http://localhost:3000
 => Run `rails server -h` for more startup options
 Puma starting in single mode...
 * Version 3.8.2 (ruby 2.4.1-p111), codename: Sassy Salamander
@@ -114,9 +114,9 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書はRuby 2.4.1、Rails 5.1.1で動作確認をしています。[^1]
+本書はRuby 2.4.1、Rails 5.1.2で動作確認をしています。[^1]
 
-[^1]: 2017年6月11日現在、Rubyの最新バージョンは2.4.1、Railsの最新バージョンは5.1.1です。
+[^1]: 2017年6月11日現在、Rubyの最新バージョンは2.4.1、Railsの最新バージョンは5.1.2です。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。ローカルに開発環境を作る場合と比べて、トラブルなく開発をはじめることができます。
 
@@ -144,7 +144,7 @@ $ gem i rails
 
 ```console
 $ rails -v
-Rails 5.1.1
+Rails 5.1.2
 ```
 
 ローカルでの開発と違うのは、rails sコマンド（rails serverの略）と、そこへのアクセス方法です。rails sコマンドを実行する際は、以下のように-b, -pオプションを指定する必要があります。
@@ -221,7 +221,7 @@ $ gem i rails
 
 ```console
 $ rails -v
-Rails 5.1.1
+Rails 5.1.2
 ```
 
 このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
@@ -234,7 +234,7 @@ Rails 5.1.1
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。
 
-2017年6月現在の最新であるバージョン3.3.0には問題があり、インストール後に若干の修正する必要があります。前のバージョンである3.2.1ではこの問題は起こらないため、こちらを利用しても問題ありません。バージョン3.2.1ではRubyのバージョンが2.2.6と古いバージョンになりますが、Railsは最新バージョンの5.1.1を使うことができ、本書の内容もそのまま実行可能です。後述の方法で、どちらかのバージョンを選んでインストールしてください。
+2017年6月現在の最新であるバージョン3.3.0には問題があり、インストール後に若干の修正する必要があります。前のバージョンである3.2.1ではこの問題は起こらないため、こちらを利用しても問題ありません。バージョン3.2.1ではRubyのバージョンが2.2.6と古いバージョンになりますが、Railsは最新バージョンの5.1.2を使うことができ、本書の内容もそのまま実行可能です。後述の方法で、どちらかのバージョンを選んでインストールしてください。
 
 もしも想定通り動作しない場合は、上記のCloud9を利用することも検討してみてください[^3]。
 
@@ -254,7 +254,7 @@ $ gem update rails --no-document
 
 ```console
 $ rails -v
-Rails 5.1.1
+Rails 5.1.2
 ```
 
 このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
@@ -283,7 +283,7 @@ $ gem install rails bundler --no-document
 
 ```console
 $ rails -v
-Rails 5.1.1
+Rails 5.1.2
 ```
 
 このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
@@ -296,4 +296,4 @@ $ gem update rails --no-document
 
 開発環境づくりはこれで完了です。
 
-[^3]: Railsのバージョンはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能ですが、Rubyのバージョンを上げるのは簡単ではないのでパッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+[^3]: Railsのバージョンはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能ですが、Rubyのバージョンを上げるのは難しいためパッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
