--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -80,7 +80,7 @@ git_source(:github) do |repo_name|
 end
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 5.1.1'
+gem 'rails', '~> 5.1.2'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 ...
@@ -89,7 +89,7 @@ gem 'sqlite3'
 Railsアプリは最初に作った状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'`の次の行に書いてみます。
 
 ```diff
-gem 'rails', '~> 5.1.1'
+gem 'rails', '~> 5.1.2'
 + gem 'awesome_print'
 ```
 
@@ -136,7 +136,7 @@ $ rails c
 
 ## Gemfileに書かれたGemのバージョンアップ
 
-各Gemは随時新しいバージョンがリリースされることがあります。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は`bundle update` コマンドを使います。実行すると、新しいバージョンのGemがある場合、バージョンアップしてGemfile.lockファイルを自動で更新します。`bundle update`コマンドを実行すると、Gemfile中のすべてのGemがバージョンアップ対象になり、新しいバージョンがあるGemはバージョンアップされます。
+各Gemは随時新しいバージョンがリリースされます。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は`bundle update` コマンドを使います。実行すると、新しいバージョンのGemがある場合、バージョンアップしてGemfile.lockファイルを自動で更新します。`bundle update`コマンドを実行すると、Gemfile中のすべてのGemがバージョンアップ対象となり、新しいバージョンの存在するGemはバージョンアップされます。
 
 特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名を添えて実行すればOKです（この場合、指定したGemだけがバージョンアップされるのではなく、指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます）。
 
