Modify self descriptions

--- a/_posts/2016-02-17-postface.md
+++ b/_posts/2016-02-17-postface.md
@@ -85,5 +85,5 @@ Chris Pineさんが書かれたRubyの入門文書の日本語訳です。やや
 
 五十嵐邦明
 
-2003年、Rubyで書かれたWeb日記アプリtDiaryを使い始めてRubyistになる。2010年から株式会社万葉でRailsを仕事で使いはじめる。2012年から2年間、一橋大学で非常勤講師としてRubyとRailsを教える。2013年から株式会社spice lifeでRailsを使ったWebアプリ開発に従事、2015年同社CTO就任。2017年からフリーランスになり、Railsエンジニア、技術顧問の仕事を行う。
+2003年、Rubyで書かれたWeb日記アプリtDiaryを使い始めてRubyistになる。2010年から株式会社万葉でRailsを仕事で使いはじめる。2012年から2年間、一橋大学で非常勤講師としてRubyとRailsを教える。2013年から株式会社spice lifeでRailsを使ったWebアプリ開発に従事、2015年同社CTO就任。2017年よりフリーランスとなり、Railsエンジニア、技術顧問として仕事を行っている。
 高専生とその卒業生向けの勉強会「Rails寺子屋」を開催したり、島根県Ruby合宿にアシスタントとして参加している。Ruby World Conference、RubyConf台湾などで講演。
