--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -22,7 +22,7 @@ Rubyの世界にもライブラリがあり、Gemと呼ばれます。Gemは [ru
 
 ## Gemをインストールして利用する
 
-Gemをインストールするにはgem installコマンドを利用します。試しにawesome_printというGemをインストールしてみましょう。
+Gemをインストールするにはgem installコマンドを利用します。例として、pメソッドをより見やすい形で拡張させたapコマンドを提供するawesome_printというGemをインストールしてみましょう。Gemをインストールするにはgem iコマンドを利用します。
 
 ```bash
 $ gem i awesome_print
@@ -59,13 +59,13 @@ $ irb
 
 画面に色付きで配列[1,2,3]が表示されれば成功です。Rubyが標準で持っているpメソッドも同等のことができますが、apメソッドの方がきれいに読み易い形で表示してくれます。
 
-プログラムで最初に実行した`require "awesome_print"`はapを使えるようにするためのコードです。Gemライブラリは、gem installして、require文を実行することで利用できます。
+プログラムで最初に実行した`require "awesome_print"`はapを使えるようにするためのコードです。Gemライブラリは、gem installしたあと、require文を実行することで利用できます。使い方はGemごとに異なるため、Gem名で検索してドキュメントを読んでみてください。GitHubのページが用意されていることが多いです。
 
 ## BundlerとGemfile
 
 Gemは前述のように、gem installコマンドで簡単にインストールすることが可能ですが、この方法でたくさんのGemをインストールしようとすると、Gemの数だけコマンドを打たなくてはいけません。それは大変なので、Gemを簡単に管理するBundlerという仕組みが用意されています。
 
-BundlerでGem群をインストールするには2つの手順を踏みます。
+BundlerでGem群をインストールするには2つの手順を実行します。
 
 1つ目はGemfileという名前のファイルに使用するGemを書くこと。2つ目はbundle installコマンドを実行することです。仕組みの名前はBundlerですが、コマンド名はbundleと最後にrが付かない点に注意です。
 
@@ -93,7 +93,7 @@ gem 'rails', '~> 5.1.2'
 + gem 'awesome_print'
 ```
 
-書いて保存したら、以下のようにbundle installコマンドを実行します。ここで`bundle install`と書くことも、また、installを省略して`bundle`と書くこともできます。
+書いて保存したら、以下のようにbundle installコマンドを実行します。ここで`bundle install`と書くことも、また、installを省略して`bundle`と書くこともできます。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。
 
 ```console
 $ bundle
@@ -130,15 +130,31 @@ $ rails c
 
 ターミナルに改行されて色がついて読み易く表示されているかと思います。Railsアプリの場合はrequire文を書かなくても良いようになっているので、require文を書く必要がありません（ちなみに、書いても問題ありません。requireを複数実行すると、最初の1回だけが適切に実行されます）。
 
-また、Gemfileを変更してbundleコマンドを実行すると、Gemfile.lockが更新されます。Gemfile.lockは、簡単に言うと使用されたGem名とバージョン情報が記録されています。gitなどでソース管理をしている場合は、両方のファイルを追加して管理してください。
+公開されているRubyで書かれたプログラムにGemfileが添えられていたときにはbundle install コマンドを実行してからプログラムを実行してみましょう。（多くの場合、ドキュメントでその旨が書かれていますが、Rubyistにとって当たり前の動作であるので、ドキュメントで省略されている場合もときどきあります。）
 
-たとえ話で説明すると、Gemfileはgemをインストールするための発注書です。bundle installコマンドを実行すると、発注書に従ってgemがインストールされます。Gemfile.lockは納品書です。発注書に基づいて実際にインストールされたgemのバージョン情報などが書かれています。
+また、Gemfileを変更してbundleコマンドを実行すると、Gemfile.lockというファイルが作成されます。Gemfile.lockには、使われているGem名とそのバージョン情報が記録されています。Gemfile.lockは自動で作られるものなので、編集する必要はありません。保管するときは、GemfileとGemfile.lockの両方のファイルを保管してください。
+
+2つのファイルの違いを例え話で説明すると、Gemfileはgemをインストールするための発注書です。Gemfileに使いたいgem名を書いて、bundle installコマンドを実行すると、発注書に従ってgemがインストールされます。Gemfile.lockは納品書です。発注書に基づいて実際にインストールされたgemとそのバージョン情報などが書かれています。
 
 ## Gemfileに書かれたGemのバージョンアップ
 
-各Gemは随時新しいバージョンがリリースされます。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は`bundle update` コマンドを使います。実行すると、新しいバージョンのGemがある場合、バージョンアップしてGemfile.lockファイルを自動で更新します。`bundle update`コマンドを実行すると、Gemfile中のすべてのGemがバージョンアップ対象となり、新しいバージョンの存在するGemはバージョンアップされます。
+各Gemは随時新しいバージョンがリリースされます。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は`bundle update` コマンドを使います。実行すると、新しいバージョンのGemがある場合、新しいバージョンのGemをインストールし、Gemfile.lockファイルを更新して上書きします。`bundle update`コマンドを実行すると、Gemfile中のすべてのGemがバージョンアップ対象となり、新しいバージョンの存在するGemはバージョンアップされます。
 
-特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名を添えて実行すればOKです（この場合、指定したGemだけがバージョンアップされるのではなく、指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます）。
+特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名を添えて実行すればOKです（指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます）。
+
+## Gemfileを使って実行する
+
+bundle updateの結果、新しいバージョンのGemがインストールされた場合、古いバージョンのGemはアンインストールされないので、同じGemの複数のバージョンがインストールされた状態になります。通常は新しいバージョンが利用され、それで問題がないケースが多いのですが、Gemfileに書かれたバージョンのGemを使って実行したいケースもあります。
+
+そのような場合は、bundle exec コマンドを使うことでGemfile, Gemfile.lock に書かれたGemバージョンでrubyのプログラムを実行することができます。
+
+```
+bundle exec rake -T
+```
+
+このように、実行したいコマンドの前にbundle execと書くことで、Gemfile, Gemfile.lockに書かれたバージョンのGemを使って実行します。bundle execに続けて、railsコマンドのほか、rubyコマンド、rakeコマンド、irbコマンドなど、Rubyに関係するあらゆるコマンドを書くことができます。
+
+今までrailsを`bin/rails`コマンドで使ってきました。ここにbundle execを書かなくてもいいのでしょうか？答えは、「書く必要はない」です。bin/以下のコマンドは実行されるときにbundle exec相当の処理を行っています。
 
 ## Gemfileでのバージョン指定
 
