Update how to install homebrew

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -186,7 +186,7 @@ $ xcode-select --install
 homebrewをインストールします。homebrewはMacでさまざまな便利なものをインストール、管理するためのツールです。
 
 ```console
-$ ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
+$ /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
 
 homebrewを使ってrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。
