Refectering preface to install ruby and rails

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -116,12 +116,15 @@ Use Ctrl-C to stop
 
 本書はRuby 2.4.1、Rails 5.1.2で動作確認をしています。2017年7月1日現在、Rubyの最新バージョンは2.4.1、Railsの最新バージョンは5.1.2です。
 
-本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。
+本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。MacとWindowsの場合それぞれでの環境構築方法を説明して、そのあとでどちらの環境でも共通であるRubyとRailsのインストール方法を説明します。
 
 - ローカルに開発環境を作る - Macの場合
 - ローカルに開発環境を作る - Windowsの場合
+- RubyとRailsをインストールする
 
 ブラウザはお好きなものをご利用いただけますが、途中のデバッグの箇所で [Chrome](https://www.google.co.jp/chrome/browser/) の機能を例にして説明していますので、Chromeを使うと分かり易いです。
+
+プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Visual Studio Code](https://code.visualstudio.com/) をお勧めします。Visual Studio Codeは無料で利用することができます（ライセンスはMITライセンスです）。
 
 もしもここに書いている内容でうまくいかない場合は、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページがRails環境構築情報が最新に保たれているので、こちらも参考にしてみてください。
 
@@ -135,21 +138,55 @@ Use Ctrl-C to stop
 $ xcode-select --install
 ```
 
-homebrewをインストールします。homebrewはMacでさまざまな便利なものをインストール、管理するためのツールです。
+[Homebrew](https://brew.sh/) をインストールします。HomebrewはMacでさまざまな便利なものをインストール、管理するためのツールです。
 
 ```console
 $ /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
 
-homebrewを使ってrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。
+Homebrewを使ってrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。
 
 ```console
 $ brew update
 $ brew install rbenv
-$ echo 'eval "$(rbenv init -)"' >> ~/.bash_profile
 $ echo 'export PATH="$HOME/.rbenv/shims:$PATH"' >> ~/.bash_profile
+$ echo 'eval "$(rbenv init -)"' >> ~/.bash_profile
 $ source ~/.bash_profile
 ```
+
+これでRubyとRailsをインストールするための準備ができました。つづいて「RubyとRailsをインストールする」へ進んでください。
+
+### ローカルに開発環境を作る - Windowsの場合
+
+Windowsの場合はWindows Subsystem for Linux(WSL)とrbenvを利用することで環境を構築することができます。インストールしたLinux上で、rbenvやaptなどLinux/UNIX向けツールを利用することでRailsの開発環境を構築できます。WSLを利用するためにはOSのバージョンがWindows10以降が必要です。
+
+WSLをインストールする方法は [Windows Subsystem for Linux Installation Guide for Windows 10 のページ](https://docs.microsoft.com/en-us/windows/wsl/install-win10) に書かれていますので、こちらを参照してください。また、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページにも同様の手順の解説が日本語で書いてあります。
+
+インストールするLinuxを選ぶところでは好きなものを選んでもらって構いませんが、特になければUbuntuを選択することをお勧めします。
+
+WSLのインストール後、起動したアプリケーション（Bashウィンドウと呼びます）にはユーザー名とパスワードの入力を促す画面が表示されていますので、適当なユーザー名（半角英数小文字のみ）とパスワードを入力しましょう（パスワードは2回入力する必要があり、画面には表示されませんが正しく入力されています）。
+
+Bashウィンドウで以下のコマンドを実行してください。なお、最初のコマンドを実行する際にパスワードの入力を求められますが、先程Bashウィンドウに入力したパスワードを入力してください(Windowsのパスワードではないので注意してください)。
+
+```console
+$ sudo apt update
+$ sudo apt upgrade -y
+$ sudo apt install autoconf bison build-essential libssl-dev libyaml-dev libreadline-dev zlib1g-dev libncurses5-dev libffi-dev libgdbm-dev sqlite3 libsqlite3-dev nodejs -y
+```
+
+つづいてrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。以下のコマンドを実行してください。
+
+```console
+$ git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+$ git clone https://github.com/rbenv/ruby-build.git "$(rbenv root)"/plugins/ruby-build
+$ echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+$ echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+$ source ~/.bashrc
+```
+
+これでRubyとRailsをインストールするための準備ができました。つづいて「RubyとRailsをインストールする」へ進んでください。
+
+### RubyとRailsをインストールする
 
 rbenvを使ってRubyをインストールします。
 
@@ -179,63 +216,3 @@ Rails 5.1.2
 このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
 
 ここまででRubyとRailsの開発環境構築ができました。
-
-プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Visual Studio Code](https://code.visualstudio.com/) をお勧めします。Visual Studio Codeは無料で利用することができます（ライセンスはMITライセンスです）。
-
-### ローカルに開発環境を作る - Windowsの場合
-
-Windowsの場合はWindows Subsystem for Linux(WSL)とrbenvを利用することで環境を構築することができます。
-
-プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Visual Studio Code](https://code.visualstudio.com/) をお勧めします。Visual Studio Codeは無料で利用することができます（ライセンスはMITライセンスです）。
-
-#### WSLのインストール
-
-WSLを使うとWindows上で利用できるLinux環境をインストールすることができます。インストールしたLinux上で、rbenvやaptなどLinux/UNIX向けツールを利用することでRailsの開発環境を構築できます。WSLを利用するためにはWindows10環境が必要になります。
-
-WSLをインストールする方法は [Windows Subsystem for Linux Installation Guide for Windows 10 のページ](https://docs.microsoft.com/en-us/windows/wsl/install-win10) に書かれていますので、こちらを参照してください。また、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページにも同様の手順の解説が日本語で書いてあります。
-
-インストールするLinuxを選ぶところでは好きなものを選んでもらって構いませんが、特になければUbuntuを選択することをお勧めします。
-
-WSLのインストール後、起動したアプリケーション（Bashウィンドウと呼びます）にはユーザー名とパスワードの入力を促す画面が表示されていますので、適当なユーザー名（半角英数小文字のみ）とパスワードを入力しましょう（パスワードは2回入力する必要があり、画面には表示されませんが正しく入力されています）。
-
-#### RubyとRailsのインストール
-
-Bashウィンドウで以下のコマンドを実行してください。なお、最初のコマンドを実行する際にパスワードの入力を求められますが、先程Bashウィンドウに入力したパスワードを入力してください(Windowsのパスワードではないので注意してください)。
-
-```console
-$ sudo apt update
-$ sudo apt upgrade -y
-$ sudo apt install autoconf bison build-essential libssl-dev libyaml-dev libreadline-dev zlib1g-dev libncurses5-dev libffi-dev libgdbm-dev sqlite3 libsqlite3-dev nodejs -y
-```
-
-つづいてrbenvをインストールします。以下のコマンドを実行してください。
-
-```console
-$ git clone https://github.com/rbenv/rbenv.git ~/.rbenv
-$ echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
-$ echo 'eval "$(rbenv init -)"' >> ~/.bashrc
-$ source ~/.bashrc
-$ git clone https://github.com/rbenv/ruby-build.git "$(rbenv root)"/plugins/ruby-build
-```
-
-Rubyをインストールします。Bashウィンドウで以下のコマンドを実行してください。
-
-```console
-$ rbenv install 2.4.1
-$ rbenv global 2.4.1
-```
-
-以上でRubyのインストールは完了です。続いて、インストールしたRubyを使ってRailsをインストールします。
-
-```console
-$ gem i rails
-```
-
-確認のため、`rails -v`コマンドを実行してみましょう。
-
-```console
-$ rails -v
-Rails 5.1.2
-```
-
-このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
