--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -38,7 +38,7 @@ Use `bundle show [gemname]` to see where a bundled gem is installed.
 * bin/rails: spring inserted
 ```
 
-次に、以下のコマンドを実行します（メッセージ中"in process 52142"、"20160702024137"、"-> 0.0013s"の数字は実行するごとに異なります）。
+次に、以下のコマンドを実行します（メッセージ中"in process 52142"、"20160702024137"、"-> 0.0013s"などの数字は実行するごとに異なります）。
 
 ```bash
 cd books_app
