--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -29,25 +29,33 @@ end
 
 変数xの有効範囲（スコープ）は、そのメソッドの中だけです（このような変数をローカル変数と呼びます）。この場合、メソッド `print_hello_world`の実行が終わると変数xと、それが指すオブジェクトは消えてしまいます。
 
-別の種類の変数として、前の章でも出てきたインスタンス変数（@はじまりの変数）があります。インスタンス変数は、インスタンスオブジェクトがなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます（ここではおおまかに、ブラウザでのあるページを表示するのが1回のリクエストだと考えて差し支えありません。ですので、別のページを表示したり、リロードを行ったりすると、また新しい別のリクエストになります）。@bookのようなインスタンス変数に格納すると、コントローラからビューまで使うことができますが、その後なくなります。
+別の種類の変数として、前の章でも出てきたインスタンス変数（@はじまりの変数）があります。インスタンス変数は、インスタンス（オブジェクト）がなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます。ここではおおまかに、ブラウザであるページを表示することが1回のリクエストだと考えて差し支えありません。別のページを表示したり、リロードを行ったりすると、新しい別のリクエストになります。@bookのようなインスタンス変数に格納すると、コントローラからビューまで使うことができますが、その後なくなります。
 
-それでも、つくったRailsアプリは別のリクエストでも情報が見れますよね？　新規入力画面で情報を入力して一度登録してしまえば、その後ブラウザから何回アクセスしても、たとえば一覧画面で何回リロードしても表示されます。
+それでも、つくったRailsアプリでは別のリクエストでも情報が見れますよね？　新規入力画面で情報を入力して一度登録してしまえば、その後ブラウザから何回アクセスしても、たとえば一覧画面で何回リロードしても表示されます。
 
 つまり、複数のリクエストに渡ってデータが保存されていることが分かります。これはインスタンス変数では実現できません。データがずっと残っているのは「データを保存する」仕事をしている「何かの仕組み」があるからなのです。
 
 その仕組みがこの章の主役、モデル（Model）です。
 
+TODO: 本文とスクショへ分解
+
 ![モデル](assets/model/kn/overview.png)
 
 この章はモデルについて説明します。また、この章でCRUDのcreateの部分を題材に説明します（前の章の続きになります）。
+
+TODO: 新図置き換え
 
 ![この章の題材](assets/model/kn/crud-create.png)
 
 コードはこの部分です。
 
+TODO: 本文へ
+
 ![BooksController create アクション](assets/model/kn/create-overview.png)
 
 モデルに関する部分はここです。
+
+TODO: リクエストの図と本文へ分解
 
 ![モデルを使っている箇所](assets/model/kn/create-model.png)
 
@@ -59,17 +67,14 @@ end
 
 ```ruby
 book = Book.new(title: "ハチミツとクローバー", memo: "美大を舞台にした青春ラブコメ")
+book.save!
 ```
 
 Book.newでBookモデルオブジェクトを作ります。このとき、タイトルとメモの情報を渡すことができます。
 
 なお、モデル名（モデルのクラス名）は英語の単数形、大文字始まりにするルールがあります。ここではBookがモデル名で、単数形で大文字始まりになっています。また、すべて小文字のbookは変数名で、1つのBookモデルオブジェクトが代入されるため単数形を使います。
 
-```ruby
-book.save
-```
-
-Bookモデルオブジェクトのsaveメソッドを呼ぶと保存できます。
+Bookモデルオブジェクトのsave!メソッドを呼ぶと保存できます。保存するメソッドはいくつかあり、saveメソッドやcreateメソッドなどがあります。
 
 ## モデルの基本的な使い方　その2　読み込み
 
