--- a/_posts/2016-02-17-postface.md
+++ b/_posts/2016-02-17-postface.md
@@ -21,55 +21,69 @@ categories:
 さらにRailsの理解を深めたい方には、以下の資料や書籍をお薦めします。
 
 - Ruby on Rails Guides
-  - [http://railsguides.jp/](http://railsguides.jp/)
-  - [電子書籍版](http://tatsu-zine.com/books/railsguides)
+  - [https://railsguides.jp](https://railsguides.jp)
+  - [電子書籍版](https://tatsu-zine.com/books/railsguides)
 
-Railsの各機能を網羅的に解説しているサイトです。Railsの機能の使い方が分からないときに最初にあたるサイトでもあります。調べ物で使うのも良いですが、一度通読しておくとどのような機能があるかを把握できてその後の進みが速いです。常に最新のRailsについての記述が書いてあるサイトでもあります。本書各章の最後に、その章の内容に該当するRails Guidesへのリンクを書いています。
+Railsの各機能を網羅的に解説しているサイトです。Railsの機能の使い方が分からないときに最初にあたるサイトでもあります。調べ物で使うのも良いですが、一度通読しておくとどのような機能があるかを把握できてその後の進みが速いです。常に最新のRailsについての記述が書いてあるサイトでもあります。本書でも各章の最後に、その章の内容に該当するRails Guidesへのリンクを書いているのでぜひ読んでみてください。
 
 - Ruby on Railsチュートリアル
-  - [http://railstutorial.jp/](http://railstutorial.jp/)
-  - [電子書籍版](http://tatsu-zine.com/books/railstutorial)
+  - [https://railstutorial.jp](https://railstutorial.jp)
+  - [電子書籍版](https://tatsu-zine.com/books/railstutorial)
 
-Railsアプリを作りながら学ぶWeb上の資料です。Railsを学ぶ初期の資料としてよく用いられています。実際にアプリを作りながら知識を深めたいという方へお勧めです。
+Railsアプリを作りながら学ぶWeb上の資料です。Railsを学ぶ初期の資料として定番のものです。実際にアプリを作りながら知識を深めたいという方へお勧めです。
 
-- 改訂3版基礎Ruby on Rails
-  - ISBN: 978-4844338154
+- 現場で使える Ruby on Rails 5 速習実践ガイド
+  - ISBN: 978-4839962227
 
-Railsの入門書籍です。基礎的な内容を丁寧に説明しています。サンプルアプリつくりを通してRailsの各機能を説明していきます。Rails4.2準拠。
+Railsの基礎知識を広く学べる、通称『現場Rails』と呼ばれる書籍です。Railsの基礎を網羅的に説明しています。Railsの受託開発や開発支援を長年つづけている株式会社万葉のみなさんが執筆されているので、タイトル通り現場で使える技術に即した内容になっています。Rails5.2対応。
+
+- 改訂4版 基礎Ruby on Rails
+  - ISBN: 978-4295004608
+
+Railsの入門書籍です。サンプルアプリつくりを通してRailsの各機能を説明していきます。必要な知識を過不足なく順序よく並べて説明しています。最初の版から良い内容で、積み重ねた改訂によりさらに磨きがかかっています。Rails5.2対応。
+
+- Ruby on Rails 6 エンジニア養成読本
+  - ISBN: 978-4297108694
+
+Rails6.0時代のRails新機能をはじめ、Railsの各機能の使い方とその解説を幅広く説明している書籍です。実践的な内容がたくさん書かれていますが、解説がどれもとても分かりやすく、早く理解できるなと感じました。Railsはバージョンアップに伴って知識も更新していく必要がありますが、この本は新しい知識を得られると共に、Rails変遷の歴史も学べます。本書からのステップアップにとても良い1冊です。Rails6.0対応。
 
 - パーフェクトRuby on Rails
   - ISBN: 978-4774165165
 
-Railsの基礎から応用まで網羅した書籍です。実際にRailsでプロダクトを作っている著者陣がそのノウハウを踏まえて体系的にRailsを解説しています。サンプルアプリを手を動かして作ることができるのも良いところです。初級者から中級者へのステップアップに。筆者が勤めている会社ではこの本で読書会をしました。名著です。Rails4.1準拠。
-
-また、RailsはRubyというプログラミング言語で作られています。Rubyの知識を学ぶことで、より内容を理解し、自分が書く内容を豊かにできます。
+Railsの基礎から応用まで網羅した書籍です。実際にRailsでプロダクトを作っている著者陣がそのノウハウを踏まえて体系的にRailsを解説しています。サンプルアプリを手を動かして作ることができるのも良いところです。初級者から中級者へのステップアップに。名著です。Rails4.1対応。
 
 ### Rubyを学ぶ資料
 
-- Rubyの教科書
-  - [`https://github.com/igaiga/hitotsubashi-ruby-2013`](https://github.com/igaiga/hitotsubashi-ruby-2013)
+RailsはRubyというプログラミング言語で作られています。Rubyの知識を学ぶことで、より内容を理解し、自分が書く内容を豊かにできます。
 
-拙著の教科書、Ruby版です。本書の内容の前に半年間、Rubyのコースを行い、その際の資料です。プログラミングが初めての方々へ読んでいただけるように書いています。第3回から第14回がRubyの内容です。2013年の資料なので若干記述が古くなっています（最新版に書き直したいところです。希望がある方は私までリクエストして焚きつけてもらえると嬉しいです）。
+- ゼロからわかる Ruby超入門
+  - 978-4297101237
 
-- たのしいRuby
-  - ISBN: 978-4797386295
+私と松岡さんで書き、べこさんがイラストを担当した書籍です。プログラミングが初めての方へ向けた、Rubyプログラミングの入門書です。プログラミングの基礎である条件分岐、繰り返しの概念を図解を入れて丁寧に説明します。そしてRubyでよく使われる整数、文字列、配列、ハッシュと言ったオブジェクトを説明しています。また、エラー時の対処方法、リファレンスマニュアルの調べ方、デバッグの基礎も学べるので、自分で調べる力をつけることができます。Railsで必要となる知識を学ぶことをゴールにしているので、メソッドやクラス、モジュールの作り方、使い方など、最低限必要となる知識を効率良く学べます。また、Gemとそれを束ねるBundlerの使い方を学べます。Ruby2.5対応。
 
-Rubyの教科書といえばこの本、という名著です。分かり易く、丁寧に、かつ網羅的にRubyの説明をしています。最新の第五版が2016年2月に発売されています。
+- たのしいRuby 第6版
+  - ISBN: 978-4797399844
 
-- プログラミング入門　- Rubyを使って -
-  - [`http://www.ie.u-ryukyu.ac.jp/~kono/software/s04/tutorial/`](http://www.ie.u-ryukyu.ac.jp/~kono/software/s04/tutorial/)
+Rubyプログラミングに必要な知識を幅広く説明していて、この本でカバーしていないRubyの知識を探すのが難しいほどです。15年以上に渡って改訂されて読み継がれている名著です。Ruby2.6対応。
 
-Chris Pineさんが書かれたRubyの入門文書の日本語訳です。やや古い文書なので、インストールに利用しているRubyのバージョンは古くなっていまが、本書で作った開発環境があればインストール作業不要で読み進めることができます。プログラミングとRubyの基礎を丁寧に説明している素晴らしい文書です。
+### さらに学びたい方のために
 
-### Rubyのコミュニティ
+- RubyとRailsの学習ガイド 2019 技術書典6 拡大版
+  - https://igaigarb.booth.pm/
 
-なにより、自分で作りたいアプリを作ってみるのが一番勉強になります。作っている上で、もしもつまづき、インターネットで検索しても分からないことがあったときには、近くのRubyコミュニティの集まりへぜひ足を運んでみてください。新しいRubyist（あなたのことです！）を温かく迎えてくれるはずです。Rubyコミュニティは「都市名.rb」という名前で活動していることが多いです。全国各地のRubyコミュニティについて、[こちら](https://github.com/ruby-no-kai/official/wiki/RegionalRubyistMeetUp)に情報がまとまっています。また、[RubyKaigi](http://rubykaigi.org/)や[地域Ruby会議](http://regional.rubykaigi.org/)と呼ばれるカンファレンスも定期的に開催されています。
+Railsを学びはじめると、Webサービスにはたくさんの技術が使われていることに気づきます。いま学んでいるこの技術は全体の中でどんな位置づけなんだろう？そして次は何を学べばいいのだろう？この本はRubyそしてRailsを学ぶ旅のガイドブックです。技術を学び、戻ってくるたびにレベルアップする、Webサービスを作る技術者の冒険の旅をサポートする地図です。各技術を学ぶための資料や書籍の情報を書いています。
+
+### Rubyコミュニティ
+
+なにより、自分で作りたいアプリを作ってみるのが一番勉強になります。作っている上で、もしもつまづき、インターネットで検索しても分からないことがあったときには、近くのRubyコミュニティへぜひ足を運んでみてください。新しいRubyist（あなたのことです！）を温かく迎えてくれるはずです。Rubyコミュニティは「都市名.rb」という名前で活動していることが多いです。全国各地のRubyコミュニティについて、[こちら](https://github.com/ruby-no-kai/official/wiki/RegionalRubyistMeetUp)に情報がまとまっています。また、[RubyKaigi](http://rubykaigi.org/)や[地域Ruby会議](http://regional.rubykaigi.org/)と呼ばれるカンファレンスも定期的に開催されています。
+
+ネット上の集まりとして、[ruby-jp](https://ruby-jp.github.io/)という、Rubyistが集まるSlackワークスペースもあります。2000人以上が参加し、RubyやRailsに限らず、あらゆる技術について話をしています。質問をするチャンネルもありますので、つまづいたことがあるときに聞いてみるときっと回答が返ってくると思います。技術以外にも、各地のカンファレンスやミートアップの情報について話したりするのはもちろん、作った料理の紹介や語学学習情報の交換など、さまざまな話題を扱うチャンネルがあります。
 
 ## 謝辞とメッセージ
 
 この講義資料を最初に作った際のレビューをしてくれた濱崎健吾さんへ感謝します。講義にもTAとして参加し、毎回の講義の内容についても一緒に考えてくれて、大変心強かったし、なによりたのしい時間でした。
 
-一橋大学のJonathan Lewis先生、鈴木隆一先生、ニフティ株式会社の宮内秀哲さん、講義の機会をいただき、一緒に講義を進めさせていただきありがとうございました。私にとって素晴らしい経験でした。ニフティ株式会社の寄附講座として行われたこの講座を開講してくださったニフティ株式会社様へ感謝致します。松岡浩平さん、講義を引き継いでいただき、また教科書についてブラッシュアップを進めてくださりありがとうございました。たいへん勉強になりました。
+一橋大学のJonathan Lewis先生、鈴木隆一先生、ニフティ株式会社の宮内秀哲さん、講義の機会をいただき、一緒に講義を進めさせていただきありがとうございました。私にとって素晴らしい経験でした。ニフティ株式会社の寄附講座として行われたこの講座を開講してくださったニフティ株式会社様へ感謝致します。松岡浩平さん、講義を引き継いでいただき、また教科書についてブラッシュアップを進め、そしてRuby超入門を一緒に作ってくれてありがとうございました。たくさんの提言で私の理解も深まり、たいへん勉強になりました。
 
 レビュアーをしてくれた丸山有彗さん、境友香さん、松永久美子さん、私の気付かない視点をいろいろと教えていただき、また、急なお願いにも快く応じていただきありがとうございました。
 
@@ -79,11 +93,10 @@ Chris Pineさんが書かれたRubyの入門文書の日本語訳です。やや
 
 最後に、ここまで読んでくださった皆様、本当にありがとうございました。みなさんとRubyコミュニティのどこかでお会いできたらこれほど幸せなことはありません。どこかで見かけましたら、ぜひ気軽にお声かけください。いつかお会いできる日を楽しみにしています。
 
-2016年3月　五十嵐邦明
+2019年11月　五十嵐邦明
 
 ## 著者略歴
 
 五十嵐邦明
 
-2003年、Rubyで書かれたWeb日記アプリtDiaryを使い始めてRubyistになる。2010年から株式会社万葉でRailsを仕事で使いはじめる。2012年から2年間、一橋大学で非常勤講師としてRubyとRailsを教える。2013年から株式会社spice lifeでRailsを使ったWebアプリ開発に従事、2015年同社CTO就任。2017年よりフリーランスとなり、Railsエンジニア、技術顧問として仕事を行っている。
-高専生とその卒業生向けの勉強会「Rails寺子屋」を開催したり、島根県Ruby合宿にアシスタントとして参加している。Ruby World Conference、RubyConf台湾などで講演。
+フリーランスのRuby, Railsエンジニア。2003年、Rubyで書かれたWeb日記アプリtDiaryを使い始めてRubyistになる。一橋大学の非常勤講師として2012年から2年間、RubyとRailsを教える。受託開発会社、Webサービス開発会社CTOなどを経て2017年4月よりフリーランス、2019年7月ガーネットテック373株式会社を設立、同社代表取締役社長。RubyWorld ConferenceやRubyConf台湾などで講演。島根県Ruby合宿、Rails寺子屋、Rails Girlsなどで講師を行う。著書に『ゼロからわかる Ruby超入門』、『Railsの教科書』、『RubyとRailsの学習ガイド』ほか。
