Writing preface, postface

--- a/_posts/2016-02-17-postface.md
+++ b/_posts/2016-02-17-postface.md
@@ -14,6 +14,8 @@ categories:
 
 ## 本書を終えたあとに
 
+TODO: Herokuで公開を書く
+
 ### Railsを学ぶ資料
 
 本書ではRailsの基礎の仕組みを説明し、簡単なアプリを作って、アプリを作る上での基本的なデバッグ作業を説明してきました。
