--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -204,3 +204,5 @@ Rails 6.0.0
 このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
 
 ここまででRubyとRailsの開発環境構築ができました。
+
+TODO: Dockerで環境構築できるか調べてみる
