Move html,css to postface and add git books

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -38,11 +38,7 @@ categories:
 
 プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した一橋大学社会学部での半期分の講義資料をもとに書いています。講義では初めてプログラムを書く学生さんが多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
 
-TODO: ★HTMLのに関して後書きへ移動する？
-
-プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。HTMLとCSSを学習する資料としては、 [サルワカのWebデザイン入門](https://saruwakakun.com/html-css/basic) や、少し古めのものですが [ごく簡単なHTMLの説明](https://www.kanzaki.com/docs/htminfo.html) などがあります。
-
-もしもあなたがデザイナーであり、HTMLコーディングはおてのもの、という場合は大きなアドバンテージがあります。本書の知識と組み合わせることで鮮やかなWebアプリを作ることができるようになるでしょう。
+プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。学習したい方へ、巻末にHTMLとCSSを学習する資料を載せています。もしもあなたがデザイナーであり、HTMLコーディングはおてのもの、という場合は大きなアドバンテージがあります。本書の知識と組み合わせることで鮮やかなWebアプリを作ることができるようになるでしょう。
 
 また、プログラミングが初めての方で、本書を読んで「プログラムの基礎をもっと学んでから挑戦したい」「プログラムを読んで理解はできるが、自分で考えて書くのが難しい」と感じた方は、私が書いた「ゼロからわかる Ruby超入門」をお勧めします。
 
