--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -89,7 +89,7 @@ TODO: 本の情報を学習ガイドにする
 
 ### scaffoldコマンド
 
-ここまで何回か出てきたrails g scaffoldコマンドは新規作成、表示、更新、削除、各機能を一度に作る機能です。つまり、scaffoldを使うとCRUD機能を持ったページを作成することができます。
+rails g scaffoldコマンドは新規作成、表示、更新、削除、各機能を一度に作る機能です。つまり、scaffoldを使うとCRUD機能を持ったページを作成することができます。
 
 scaffoldは英語で「（建築現場などの）足場」という意味です。工事中の建物のまわりに組まれた足場の上で大工さんが作業している、あの足場です。scaffoldコマンドはWebアプリを作り易くするための足場です。CRUD機能はWebアプリでよく使う機能なので、「CRUDのこの部分にこの機能を足したらできるな」という場合に、scaffoldで生成したファイル群を編集して自分のアプリを作っていくと効率良く作れます。
 
@@ -138,19 +138,19 @@ Running via Spring preloader in process 20280
 
 ![CRUD 4つの画面](assets/crud/figures/crud_4_pages.png)
 
-それぞれの機能と対応するアクションを示したものが次の図です（アクションとはコントローラに書いてあるpublicなメソッドのことです）。基本的には、1つの画面を表示するとき、1つのアクションが実行されています。アクションについてはまた後で説明します。
+それぞれの機能と対応するアクションを示したものが次の図です。前の章でも説明されたアクションは、コントローラに書かれたpublicなメソッドのことです。1つの画面を表示するとき、1つのアクションが実行されているのが基本形です。
 
 ![CRUD 7つのアクション](assets/crud/figures/crud_7_actions.png)
 
-この中から最初に、indexアクションのページについて見ていきましょう。
+最初は、indexアクションのページについて見ていきましょう。
 
 ## indexアクション
 
-最初にindexアクションについて見ていきましょう。さきほどの7つのアクションの図で示されたこの部分です。
+indexアクションについて見ていきましょう。さきほどの7つのアクションの図で示されたこの部分です。
 
 ![indexアクション](assets/crud/figures/index_7_actions.png)
 
-indexアクションで表示されるページ（下の図）は登録されているデータの一覧です。ここでは登録されているBookの一覧表示画面になります。この画面が表示されるまでの処理を追いかけてみましょう。
+indexアクションで表示されるページ（次の図）は登録されているデータの一覧です。ここでは登録されているBookの一覧表示画面になります。この画面が表示されるまでの処理を追いかけてみましょう。
 
 TODO: データを学習ガイドと超入門に置き換え
 
